// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Edge Cases > Complex TypeScript > should downcompile optional chaining type declarations by default 1`] = `
"import { createElementBlock as _createElementBlock, openBlock as _openBlock, toDisplayString as _toDisplayString } from "vue";
export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return _openBlock(), _createElementBlock(
    "div",
    null,
    _toDisplayString($setup.name),
    1
    /* TEXT */
  );
}
export default {
  __name: "anonymous",
  render,
  setup(__props) {
    const user = {};
    const name = user?.name?.first;
    const __returned__ = {
      name,
      user
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
};"
`;

exports[`Edge Cases > Complex TypeScript > should handle async/await with types 1`] = `
"import { withAsyncContext as _withAsyncContext } from "vue";
import { createElementBlock as _createElementBlock, openBlock as _openBlock, toDisplayString as _toDisplayString } from "vue";
export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return _openBlock(), _createElementBlock(
    "div",
    null,
    _toDisplayString($setup.data),
    1
    /* TEXT */
  );
}
export default {
  __name: "anonymous",
  render,
  async setup(__props) {
    let __temp, __restore;
    async function fetchData() {
      return "data";
    }
    const data = ([__temp, __restore] = _withAsyncContext(() => fetchData()), __temp = await __temp, __restore(), __temp);
    const __returned__ = {
      data,
      fetchData
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
};"
`;

exports[`Edge Cases > Complex TypeScript > should handle class with decorators pattern 1`] = `
"import { createElementBlock as _createElementBlock, openBlock as _openBlock, toDisplayString as _toDisplayString } from "vue";
export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return _openBlock(), _createElementBlock(
    "div",
    null,
    _toDisplayString($setup.instance.getName()),
    1
    /* TEXT */
  );
}
export default {
  __name: "anonymous",
  render,
  setup(__props) {
    class MyClass {
      name;
      constructor(name) {
        this.name = name;
      }
      getName() {
        return this.name;
      }
    }
    const instance = new MyClass("test");
    const __returned__ = {
      MyClass,
      instance
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
};"
`;

exports[`Edge Cases > Complex TypeScript > should handle generic function declarations 1`] = `
"import { createElementBlock as _createElementBlock, openBlock as _openBlock, toDisplayString as _toDisplayString } from "vue";
export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return _openBlock(), _createElementBlock(
    "div",
    null,
    _toDisplayString($setup.result),
    1
    /* TEXT */
  );
}
export default {
  __name: "anonymous",
  render,
  setup(__props) {
    function identity(value) {
      return value;
    }
    const result = identity("test");
    const __returned__ = {
      identity,
      result
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
};"
`;

exports[`Edge Cases > Complex TypeScript > should handle type assertions 1`] = `
"import { createElementBlock as _createElementBlock, openBlock as _openBlock } from "vue";
export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return _openBlock(), _createElementBlock("div", null, "Test");
}
export default {
  __name: "anonymous",
  render,
  setup(__props) {
    const element = document.querySelector(".test");
    const value = someValue;
    const __returned__ = {
      value,
      element
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
};"
`;

exports[`Edge Cases > Complex TypeScript > should preserve optional chaining type declarations when requested 1`] = `
"import { defineComponent as _defineComponent } from 'vue'
import { createElementBlock as _createElementBlock, openBlock as _openBlock, toDisplayString as _toDisplayString } from "vue"

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString($setup.name), 1 /* TEXT */))
}

interface User { name?: { first: string } }

export default /*@__PURE__*/_defineComponent({
  __name: 'anonymous',
  render: render,
  setup(__props) {

const user: User = {}
const name = user?.name?.first

const __returned__ = { name, user }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
return __returned__
}

})"
`;
